--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>CSS Assignment No.1</title>
 </head>
+
 <body>
     <h1> CSS ASSIGNMENT No. 1</h1>
     <div>
-        CSS Color Challenge
+        <h1 class="main">
+            CSS Color Challenge
+        </h1>
+        <h2 class="second">Explore the spectrum of colors!
+        </h2>
+        <h2 class="third">Hello World, How Are you?</h2>
+        <h2 class="fourth">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt ex quos maiores ipsum nesciunt facilis ad laboriosam amet voluptas eum repudiandae doloribus commodi, consequuntur pariatur quam sed est eius exercitationem.</h2>
     </div>
 </body>
+
 </html>
