--- a/task2/index.html
+++ b/task2/index.html
@@ -7,17 +7,19 @@
     <title>CSS Assignment</title>
 </head>
 <body>
-    <h1>CSS (Explore the world of CSS styling!) </h1>
-    <h2 class="line1">Assignment No.1</h2>
-   
+    <button><a href="../index.html">Back to Main Menu</a></button>
+    <h1 class="task2">CSS Challenge: Mastering Selectors</h1>
+    <p class="line1">
+        Explore the world of CSS styling!
+    </p>
         
     <ul>
-        <li><a href="task1/index.html">Task 1</a></li>
-        <li><a href="task2/index.html">Task 2</a></li>
-        <!-- <li><a href="">Contact</a></li> -->
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Contact</a></li>
         
     </ul>
-    <!-- <p class="line2">
+    <p class="line2">
         Dive into content styling.
     </p>
   <p class="line3">
@@ -26,7 +28,7 @@
     </p>
 <p class="line4">
     (c) 2024 CSS Mastery. All rights reserved.
-</p> -->
+</p>
 
 </body>
 </html>
